2012-03-07  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/util/port.scm (util): added port-fold-right.

	* src/clos.c (Sg_NoNextMethod): fixed infinite loop.

2012-03-05  Takashi Kato  <ktakashi@ymail.com>

	* src/os/win/thread.c (Sg_InternalThreadStart): fixed thread-terminate! related error on Windows.

2012-02-11  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/text/csv.scm (text csv): added csv parse library.

	* src/extlib.stub (current-directory): fixed segv.

2012-02-08  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm (and-let*): added and-let* as a builtin syntax.

	* src/library.c (search_library): modified to use full path to save
	cache file.

	* src/vm.c (Sg_GetStackTrace): modified to get better stack trace.

2012-02-05  Takashi Kato  <ktakashi@ymail.com>

	* src/null.stub (put-string put-byevector): fixed range check.

2012-01-16  Takashi Kato  <ktakashi@ymail.com>

	* ext/*/*_stub.c: removed extra module's generated stub files.

	* ext/regex/regex2.c (unescape_char): fixed reading \xhh.
	added \uhhhh and \Uhhhhhhhh.

	* src/null.stub (quotient remainder modulo): modified to raise an
	&assertion when divisor was 0.

2012-01-14  Takashi Kato  <ktakashi@ymail.com>

	* ext/crypto/random.c (Sg_MakePseudoRandom): separated pseudo random and
	secure random

2012-01-11  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm (include include-ci): implemented include related
	syntax.

2012-01-05  Takashi Kato  <ktakashi@ymail.com>

	* src/extlib.stub (weak-vector): supported weak vector.

	* boot/compiler.scm (cond-expand): added builtin cond-expand.

	* README.md: changed to Markdown format.

2012-01-04  Takashi Kato  <ktakashi@ymail.com>

	* src/null.stub (list->string): it accepted non list object and
	returned empty string.

	* R7RS: added first support for R7RS libraries and syntax.

	* boot/compiler.scm (case): adjusted case to R7RS '=> keyword.

2012-01-03  Takashi Kato  <ktakashi@ymail.com>
